--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="newHand"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.922"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
-
     <Button
-        android:id="@+id/button"
+        android:id="@+id/hitMeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
         android:onClick="hitMe"
-        android:text="Button"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="387dp" />
+        android:text="Hit Me!"
+        app:layout_constraintBottom_toTopOf="@+id/playerCardImageView1"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/playerCardImageView1"
@@ -35,6 +25,56 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/two_c" />
+
+    <ImageView
+        android:id="@+id/dealerCardImageView0"
+        android:layout_width="69dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/two_c" />
+
+    <ImageView
+        android:id="@+id/dealerCardImageView1"
+        android:layout_width="69dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/dealerCardImageView0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/two_c" />
+
+    <ImageView
+        android:id="@+id/dealerCardImageView2"
+        android:layout_width="69dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/dealerCardImageView1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/two_c" />
+
+    <ImageView
+        android:id="@+id/dealerCardImageView3"
+        android:layout_width="69dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/dealerCardImageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/two_c" />
+
+    <ImageView
+        android:id="@+id/dealerCardImageView4"
+        android:layout_width="69dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/dealerCardImageView3"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/two_c" />
 
     <ImageView
@@ -85,5 +125,31 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/playerCardImageView1"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/stayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:onClick="stayClicked"
+        android:text="Stay"
+        app:layout_constraintBottom_toTopOf="@+id/playerCardImageView4"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/playAgainButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="228dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginBottom="229dp"
+        android:onClick="newHand"
+        android:text="Play Again?"
+        app:layout_constraintBottom_toTopOf="@+id/playerCardImageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dealerCardImageView2" />
 
 </android.support.constraint.ConstraintLayout>
