--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,4 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Stats" android:id="@+id/stats"></item>
+    <item android:title="Reset Stats" android:id="@+id/resetStats"></item>
 </menu>
